Memory patches (leaks, uninitialized value)
This issue was migrated from bug 3330 in our old bug tracker.
Original bug information:
Reporter: Jakub Zawadzki
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
gtk_label_set_text-and-g_strdup_printf-memleaks.diff: Fix memleaks in gtk/expert_comp_dlg.c
protocol-initialize-display.diff: Initialize hfinfo->display for FT_PROTOCOL
not-freed-memory.diff: Fix some not-freed memory at cleanup
edonkey-fix-memleaks-hash.diff: Fix memleaks while creating kademlia hash
memleak-base64_decode.patch: Fix memleak in base64_decode